--- a/client/src/styles/appointmentList.css
+++ b/client/src/styles/appointmentList.css
@@ -25,7 +25,9 @@
         }
     }
 
-    .noAppointmentsFoundLine {
-        padding-left: var(--medium-gap);
-    }
+
+}
+
+.noAppointmentsFoundLine {
+    display: none;
 }
