Fix minor things

--- a/client/src/styles/appointments.css
+++ b/client/src/styles/appointments.css
@@ -81,6 +81,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                user-select: none;
             }
             
             .searchContainer {
