Add new appointment button from patient page

--- a/client/src/styles/appointments.css
+++ b/client/src/styles/appointments.css
@@ -138,7 +138,7 @@
         .appointmentListContainer {
             grid-column: 1 / 4;
             grid-row: 3 / 4;
-            overflow: scroll;
+            overflow-y: auto;
             padding-bottom: var(--medium-gap);
             transition: var(--transition);
 
@@ -147,4 +147,10 @@
             }
         }
     }
+
+    .searchLabel {
+        display: flex;
+        align-items: center;
+    }
+
 }
