--- a/client/src/styles/appointmentFormDialog.css
+++ b/client/src/styles/appointmentFormDialog.css
@@ -7,7 +7,7 @@
         justify-content: center;
         flex-wrap: wrap;
         height: 100%;
-        overflow: scroll;
+        overflow-y: auto;
         padding-top: calc(var(--big-gap) * 2);
 
         &.inPatientDialogForm {
