--- a/client/src/styles/appointmentList.css
+++ b/client/src/styles/appointmentList.css
@@ -2,19 +2,27 @@
     display: grid;
     grid-auto-columns: 1fr;
     grid-auto-flow: column;
-    grid-template-rows: 30px;
+    grid-template-rows: min-content;
     user-select: none;
 
-    &:hover {
+    &:hover, &.emptyTimeSlot:hover {
         background-color: var(--primary-container);
     }
     
-    &:hover p {
+    &:hover p, &.emptyTimeSlot:hover p {
         color: var(--on-primary-container);
+    }
+    
+    &.noshow {
+        background-color: var(--warning-secondary);
+    }
+    
+    &.emptyTimeSlot {
+        background-color: var(--surface);
     }
 
     .infoContainer {
-        overflow: scroll;
+        /* overflow: scroll; */
 
         &:first-of-type {
             padding-left: var(--medium-gap);
@@ -24,8 +32,6 @@
             padding-right: var(--medium-gap);
         }
     }
-
-
 }
 
 .noAppointmentsFoundLine {
