--- a/client/src/styles/patientList.css
+++ b/client/src/styles/patientList.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-auto-columns: 1fr;
     grid-auto-flow: column;
-    grid-template-rows: 30px;
+    grid-template-rows: min-content;
     gap: var(--small-gap);
     user-select: none;
     padding-left: var(--medium-gap);
@@ -14,9 +14,5 @@
     
     &:hover p {
         color: var(--on-primary-container);
-    }
-
-    .infoContainer {
-        overflow: scroll;
     }
 }
