--- a/client/src/styles/appointmentFormDialog.css
+++ b/client/src/styles/appointmentFormDialog.css
@@ -1,6 +1,6 @@
 .appointmentFormDialog {
-    max-width: 80vw;
-    height: 80vh;
+    width: 90vw;
+    height: 90vh;
 
     .appointmentForm {
         display: flex;
@@ -57,9 +57,11 @@
             gap: var(--medium-gap);
             align-self: end;
 
-            .submitButton {
+            .addAnotherAppointment, .addNewAppointment {
                 margin-left: auto;
             }
+
+
         }
     }
 }
