--- a/client/src/styles/patientFormDialog.css
+++ b/client/src/styles/patientFormDialog.css
@@ -21,15 +21,17 @@
         
         .infoContainer {
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr;
             grid-auto-flow: row;
-            grid-auto-rows: max-content;
+            grid-auto-rows: 1fr;
             gap: var(--medium-gap);
-    
+            padding-bottom: var(--big-gap);
+
             .labelAndInputContainer {
                 display: grid;
-                grid-template-columns: 110px 1fr;
+                grid-template-columns: 100px 1fr;
                 grid-template-rows: min-content;
+                /* Make sure it propagates (align-items: center) */
                 align-items: center;
             }
         }
